terraform/modules/security/bgp.tf
resource "aws_security_group_rule" "calico_bgp" {
  type              = "ingress"
  from_port         = 179
  to_port           = 179
  protocol          = "tcp"
  security_group_id = aws_security_group.ec2.id

  self = true
}

resource "aws_security_group_rule" "calico_ipip" {
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "4"
  security_group_id = aws_security_group.ec2.id

  self = true
}
